--- a/styles.css
+++ b/styles.css
@@ -239,3 +239,81 @@ body {
   display: table;
   clear: both;
 }
+
+.third-section {
+  display: flex;
+  align-items: center;
+}
+
+.editor-x {
+  background-color: white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  border: 1px solid black;
+  border-radius: 0.5rem;
+}
+
+.firts-part-third-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-grow: 2;
+  margin: 3rem;
+}
+
+.second-part-third-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-grow: 3;
+  background-color: #999;
+  margin: 3rem;
+  text-align: center;
+  border-radius: 0.5rem;
+}
+
+.margin-bottom-2rem {
+  margin-bottom: 2rem;
+}
+
+.margin-top-bottom-5rem {
+  margin: 5rem 0;
+}
+
+.cursor-pointer {
+  cursor: pointer;
+}
+
+.articles-fourth-section {
+  display: flex;
+  align-items: center;
+}
+
+.articles-fourth-section-grow-1 {
+  flex-grow: 1;
+}
+
+.margin-2rem {
+  margin: 2rem;
+}
+
+.arrows {
+  display: flex;
+  align-items: center;
+  text-align: center;
+  margin-bottom: 5rem;
+}
+
+.fifth-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #333;
+  text-align: center;
+}
+
+.text-color-white {
+  color: white;
+}
