--- a/styles.css
+++ b/styles.css
@@ -155,10 +155,6 @@ body {
   padding: 3rem;
 }
 
-.content-firts-article-firts-section {
-  
-}
-
 .text-color-black {
   color: black;
 }
@@ -316,4 +312,36 @@ body {
 
 .text-color-white {
   color: white;
+}
+
+.firts-part-sixth-section {
+  display: flex;
+}
+
+.second-part-sixth-section {
+  display: flex;
+}
+
+.second-important-card-sixth-section {
+  border: 1px solid black;
+  border-radius: 2rem;
+  padding: 2rem;
+  background-color: #ddd;
+  flex-grow: 1;
+}
+
+.firts-important-card-sixth-section {
+  border: 1px solid black;
+  border-radius: 2rem;
+  padding: 2rem;
+  background-color: #666;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-grow: 1;
+  width: 100%;
+}
+
+.text-align-center {
+  text-align: center;
 }
