--- a/styles.css
+++ b/styles.css
@@ -373,3 +373,49 @@ body {
   background-color: #ccc;
   padding: 2rem;
 }
+
+footer {
+  padding: 6rem;
+  background-color: #484848;
+  text-align: center;
+  color: #ffffff;
+}
+
+footer ul {
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
+}
+
+footer li {
+  float: left;
+}
+
+footer li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding-bottom: 1em;
+    padding-right: 1.5em;
+    text-decoration: none;
+    font-size: 1.5em;
+  }
+
+  .small-ul {
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+  }
+  
+  .small-li-a {
+      display: block;
+      color: white;
+      text-align: center;
+      padding-bottom: 1em;
+      padding-right: 1.5em;
+      text-decoration: none;
+    }
+
+.footer-title {
+  padding-bottom: 2em;
+}
