--- a/styles.css
+++ b/styles.css
@@ -374,48 +374,23 @@ body {
   padding: 2rem;
 }
 
-footer {
-  padding: 6rem;
-  background-color: #484848;
+.footer {
+  background-color: #333;
+  color: white;
   text-align: center;
-  color: #ffffff;
+  padding: 2rem;
 }
 
-footer ul {
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
+.last-footer {
+  display: flex;
+  align-items: center;
 }
 
-footer li {
-  float: left;
+.width-footer-pictures {
+  width: 5rem;
+  margin: -4rem 4rem 4rem 4rem;
 }
 
-footer li a {
-    display: block;
-    color: white;
-    text-align: center;
-    padding-bottom: 1em;
-    padding-right: 1.5em;
-    text-decoration: none;
-    font-size: 1.5em;
-  }
-
-  .small-ul {
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-  }
-  
-  .small-li-a {
-      display: block;
-      color: white;
-      text-align: center;
-      padding-bottom: 1em;
-      padding-right: 1.5em;
-      text-decoration: none;
-    }
-
-.footer-title {
-  padding-bottom: 2em;
+.margin-bottom-1rem {
+  margin-bottom: 1rem;
 }
